--- a/front/package.json
+++ b/front/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
+    "axios": "^0.21.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
@@ -25,6 +26,7 @@
       "react-app/jest"
     ]
   },
+  "proxy": "https://api.pluralsight.com:8000",
   "browserslist": {
     "production": [
       ">0.2%",
